[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hbnmigration"
dynamic = ["version"]
description = "WebSocket and API monitoring with Iceberg logging"
requires-python = ">=3.14,<3.16"
dependencies = [
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "mindlogger-data-export>=0.1.14",
    "msal>=1.35.1",
    "openpyxl>=3.1.5",
    "pandas-stubs>=3.0.0.260204",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.12.5",
    "pyhumps>=3.8.0",
    "pyiceberg[s3fs,glue,pyarrow]>=0.5.0",
    "pyspark>=4.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.26",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.32.4.20260107",
    "uvicorn>=0.44.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "aiohttp",
    "boto3-stubs[s3,glue]",
    "mypy>=1.20.0",
    "pytest-asyncio>=0.23.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "types-boto3",
]

[project.scripts]
curious-alerts-to-redcap = "hbnmigration.from_curious.alerts_to_redcap:cli"
curious-data-to-redcap = "hbnmigration.from_curious.data_to_redcap:main"
curious-invitations-to-redcap = "hbnmigration.from_curious.invitations_to_redcap:main"
redcap-to-curious = "hbnmigration.from_redcap.to_curious:main"
redcap-to-curious-serve = "hbnmigration.from_redcap.to_curious:serve"
redcap-to-redcap = "hbnmigration.from_redcap.to_redcap:main"
redcap-to-redcap-serve = "hbnmigration.from_redcap.to_redcap:serve"
ripple-to-redcap = "hbnmigration.from_ripple.to_redcap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
extend-select = ["A", "B904", "C4", "D", "E", "EM", "F541", "G", "I", "ICN", "LOG007", "N", "NPY", "PL", "RET", "RSE", "RUF", "Q", "T20", "TRY002", "TRY201", "TRY400", "TRY401", "UP032", "W"]
ignore = ["D203", "D212", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = false
known-first-party = ["mindlogger_data_export"]

[tool.ruff.lint.per-file-ignores]
"src/hbnmigration/from_redcap/config.py" = ["N801"]
"conftest.py" = ["PLR0913", "PLR2004"]
"test_*.py" = ["PLC0415", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = [
    ".*_config_variables/.*_variables/__init__\\.py$"
]

[tool.pyright]
pythonVersion = "3.14"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.package-data]
hbnmigration = ["VERSION"]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.uv.sources]
mindlogger-data-export = { git = "https://github.com/ChildMindInstitute/mindlogger-data-export-post-processing.git", rev = "Output/REDCapFormat" }
